fixed watch later dir

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -8,4 +8,4 @@ blend-subtitles=yes
 stop-screensaver
 osd-duration=4000
 osd-font-size=30
-watch-later-directory=$HOME/.local/share/mpv
+watch-later-directory=~/.local/share/mpv/
