removed zsh shell from terminal emulator launch configs

--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -4,10 +4,10 @@ window:
   padding:
     x: 2
     y: 2
-shell:
-  program: /usr/bin/zsh
-  args:
-    - --login
+# shell:
+#   program: /usr/bin/zsh
+#   args:
+#     - --login
 font:
   normal:
     family: JetBrainsMono Nerd Font
