--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,6 @@
 # Fish as default shell
-set -g default-command /usr/bin/zsh
-set -g default-shell /usr/bin/zsh
+# set -g default-command /usr/bin/zsh
+# set -g default-shell /usr/bin/zsh
 
 set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
