changed bat theme

--- a/bat/.config/bat/config
+++ b/bat/.config/bat/config
@@ -1,8 +1,8 @@
 # Set theme
---theme="OneHalfDark"
+--theme="base16"
 
 # Show line numbers, Git modifications and file header (but no grid)
-#--style="numbers,changes,header"
+--style="numbers,changes,header"
 
 # Use italic text on the terminal (not supported on all terminals)
 --italic-text=always
