--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,12 +1,12 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = eDP-1,highres@60,auto,auto
-monitor = ,preferred,auto,1
+# monitor = eDP-1,highres@60,auto,auto
+monitor = ,preferred,auto,auto
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
 exec-once = ~/.config/hypr/xdg-portal-hyprland
-exec-once = foot --server
+# exec-once = foot --server
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
@@ -113,7 +113,7 @@ windowrulev2 = workspace 9,class:brave-browser,title:^New Private Tab - Brave$
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Return, exec, footclient
+bind = $mainMod, Return, exec, alacritty
 bind = $mainMod, Q, killactive, 
 bind = $mainMod ALT, M, exit, 
 bind = $mainMod, V, togglefloating, 
