--- a/imv/.config/imv/config
+++ b/imv/.config/imv/config
@@ -15,7 +15,7 @@ suppress_default_binds = true
 # Define some key bindings
 q = quit
 y = exec echo working!
-<Shift+W> = setbg "$imv_current_file"
+<Shift+W> = exec setbg "$imv_current_file"
 
 # Image navigation
 <Left> = prev
