--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -11,7 +11,7 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = waybar
-exec = swaybg -m fill -i ~/.config/wall.jpg
+exec = swaybg -m fill -i ~/.config/hypr/bg.jpg
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -183,7 +183,7 @@ bind = SUPER, tab, movetoworkspace, +1
 
 bind = ALT, tab, workspace, e+1
 
-bind = , print, exec, grim -g "$(slurp)" -l 3 ~/Pictures/ss/$(date +"%Y-%m-%d-%H%M%S").png | wl-copy -t image/png
+bind = , print, exec, grim -g "$(slurp)" -l 3 ~/Pictures/Screenshots/$(date +"%Y-%m-%d-%H%M%S").png | wl-copy -t image/png
 
 binde=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 binde=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
