trying out kitty terminal emulator

--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -9,7 +9,7 @@
 # title=foot
 # locked-title=no
 
-font=JetBrainsMono Nerd Font:size=10
+font=JetBrainsMono Nerd Font:size=11
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -19,9 +19,9 @@ font=JetBrainsMono Nerd Font:size=10
 # vertical-letter-offset=0
 # underline-offset=<font metrics>
 # box-drawings-uses-font-glyphs=no
-dpi-aware=auto
+# dpi-aware=true
 
-initial-window-size-pixels=800x600  # Or,
+initial-window-size-pixels=1000x800  # Or,
 # initial-window-size-chars=<COLSxROWS>
 # initial-window-mode=windowed
 pad=4x4                             # optionally append 'center'
