--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -10,7 +10,7 @@ exec-once = ~/.config/hypr/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = waybar
+exec-once = gBar bar 0
 exec = swaybg -m fill -i ~/.config/hypr/bg.jpg
 
 # Source a file (multi-file configs)
@@ -53,10 +53,10 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 5
-    blur = false
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = true
+#    blur = false
+#    blur_size = 3
+#    blur_passes = 1
+#    blur_new_optimizations = true
     blurls = lockscreen
 
     drop_shadow = false
@@ -113,7 +113,7 @@ windowrulev2 = workspace 9,class:brave-browser,title:^New Private Tab - Brave$
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Return, exec, alacritty
+bind = $mainMod, Return, exec, kitty
 bind = $mainMod, Q, killactive, 
 bind = $mainMod ALT, M, exit, 
 bind = $mainMod, V, togglefloating, 
