hyprland config changes

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -2,16 +2,18 @@
 # monitor = eDP-1,highres@60,auto,auto
 monitor = ,preferred,auto,auto
 
+env = GTK_THEME, Adwaita-dark
+
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
 exec-once = ~/.config/hypr/xdg-portal-hyprland
-# exec-once = foot --server
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = gBar bar 0
-exec = swaybg -m fill -i ~/.config/hypr/bg.jpg
+exec-once = waybar 
+exec-once = nm-applet
+exec-once = swaybg -m fill -i ~/.config/hypr/bg.jpg
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -115,17 +117,18 @@ $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, kitty
 bind = $mainMod, Q, killactive, 
-bind = $mainMod ALT, M, exit, 
+# bind = $mainMod ALT, M, exit, 
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, SPACE, exec, wofi --show drun
 bind = $mainMod, R, exec, wofi --show run
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
-bind = $mainMod ALT, R, exec, swaybg -m fill -i $HOME/.config/wall.jpg
+bind = $mainMod ALT, R, exec, swaybg -m fill -i $HOME/.config/hypr/bg.jpg
 
 bind = $mainMod ALT, F, exec, nautilus
 bind = $mainMod ALT, B, exec, brave
 bind = $mainMod ALT, N, exec, brave --incognito
+bind = $mainMod ALT, O, exec, obsidian
 bind = $mainMod ALT, W, exec, rway
 
 bind = $mainMod ALT, L, exec, swaylock
