--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -2,11 +2,12 @@
     "layer": "top", // Waybar at top layer
     "position": "top", // Waybar position (top|bottom|left|right)
     "height": 28, // Waybar height (to be removed for auto height)
+    "spacing": 4,
     // "width": 1280, // Waybar width
     // Choose the order of the modules
     "modules-left": ["hyprland/workspaces", "hyprland/window"],
     "modules-center": ["clock"],
-    "modules-right": ["network", "bluetooth", "cpu", "memory", "pulseaudio", "idle_inhibitor", "tray"],
+    "modules-right": ["network", "bluetooth", "cpu", "memory", "pulseaudio", "idle_inhibitor", "backlight", "tray"],
     // Modules configuration
     // "sway/workspaces": {
     //     "disable-scroll": true,
@@ -98,7 +99,7 @@
         "format-icons": ["", "", ""]
     },
     "backlight": {
-        // "device": "acpi_video1",
+        "device": "acpi_video1",
         "format": "{percent}% {icon}",
         "format-icons": ["", ""],
         "on-scroll-up": "brightnessctl set 1%+",
