--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -85,7 +85,7 @@ dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = yes # you probably want this
-    force_split = 2
+    # force_split = 2
 }
 
 master {
@@ -118,7 +118,7 @@ $mainMod = SUPER
 bind = $mainMod, Return, exec, kitty
 bind = $mainMod, Q, killactive, 
 # bind = $mainMod ALT, M, exit, 
-bind = $mainMod, V, togglefloating, 
+bind = $mainMod, F, togglefloating, 
 bind = $mainMod, SPACE, exec, wofi --show drun
 bind = $mainMod, R, exec, wofi --show run
 bind = $mainMod, P, pseudo, # dwindle
@@ -128,10 +128,10 @@ bind = $mainMod ALT, R, exec, swaybg -m fill -i $HOME/.config/hypr/bg.jpg
 bind = $mainMod ALT, F, exec, nautilus
 bind = $mainMod ALT, B, exec, brave
 bind = $mainMod ALT, N, exec, brave --incognito
-bind = $mainMod ALT, O, exec, obsidian
+bind = $mainMod ALT, O, exec, md.obsidian.Obsidian
 bind = $mainMod ALT, W, exec, rway
 
-bind = $mainMod ALT, L, exec, swaylock
+bind = $mainMod ALT, L, exec, gtklock
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
