--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -8,12 +8,13 @@ env = GTK_THEME, Adwaita-dark
 
 # Execute your favorite apps at launch
 exec-once = ~/.config/hypr/xdg-portal-hyprland
+exec-once = ~/.config/hypr/wallpaper.sh
+exec-once = waybar 
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = waybar 
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = nm-applet
-exec-once = swaybg -m fill -i ~/.config/hypr/bg.jpg
+exec-once = blueman-applet
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -131,7 +132,7 @@ bind = $mainMod ALT, N, exec, brave --incognito
 bind = $mainMod ALT, O, exec, md.obsidian.Obsidian
 bind = $mainMod ALT, W, exec, rway
 
-bind = $mainMod ALT, L, exec, gtklock
+bind = $mainMod ALT, L, exec, swaylock
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
