--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -3,12 +3,22 @@
 monitor = ,preferred,auto,auto
 
 env = GTK_THEME, Adwaita-dark
+env = GDK_BACKEND, wayland
+env = SDL_VIDEODRIVER, wayland
+env = CLUTTER_BACKEND, wayland
+
+env = XDG_CURRENT_DESKTOP, Hyprland
+env = XDG_SESSION_TYPE, wayland
+env = XDG_SESSION_DESKTOP, Hyprland
+
+env = MOZ_ENABLE_WAYLAND, 1
+env = EDITOR,helix
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
 exec-once = ~/.config/hypr/xdg-portal-hyprland
-exec-once = ~/.config/hypr/wallpaper.sh
+exec-once = hyprpaper
 exec-once = waybar 
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -37,7 +47,14 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
-# misc:vfr = true
+misc {
+  disable_hyprland_logo = true 
+  disable_splash_rendering = false 
+  animate_manual_resizes = false
+  animate_mouse_windowdragging = false
+  vfr = true
+  vrr = 0
+}
 
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
