back to hyprland imv to set wallpaper and lf to set wallpaper

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -133,23 +133,22 @@ windowrulev2 = workspace 9,class:brave-browser,title:^New Private Tab - Brave$
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Return, exec, kitty
 bind = $mainMod, Q, killactive, 
-# bind = $mainMod ALT, M, exit, 
 bind = $mainMod, F, togglefloating, 
-bind = $mainMod, SPACE, exec, wofi --show drun
 bind = $mainMod, R, exec, wofi --show run
+bind = $mainMod ALT, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
-bind = $mainMod ALT, R, exec, swaybg -m fill -i $HOME/.config/hypr/bg.jpg
 
+bind = $mainMod, Return, exec, kitty
 bind = $mainMod ALT, F, exec, nautilus
 bind = $mainMod ALT, B, exec, brave
 bind = $mainMod ALT, N, exec, brave --incognito
 bind = $mainMod ALT, O, exec, md.obsidian.Obsidian
 bind = $mainMod ALT, W, exec, rway
 
-bind = $mainMod ALT, L, exec, swaylock
+# bind = $mainMod ALT, L, exec, swaylock
+bind = $mainMod ALT, L, exec, systemctl suspend
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
