--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -145,7 +145,7 @@ bind = $mainMod ALT, F, exec, nautilus
 bind = $mainMod ALT, B, exec, brave
 bind = $mainMod ALT, N, exec, brave --incognito
 bind = $mainMod ALT, O, exec, md.obsidian.Obsidian
-bind = $mainMod ALT, W, exec, rway
+bind = $mainMod ALT, W, exec, ~/.local/bin/rway
 
 # bind = $mainMod ALT, L, exec, swaylock
 bind = $mainMod ALT, L, exec, systemctl suspend
