reversions to gnome

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -59,8 +59,8 @@ misc {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 4
-    gaps_out = 4
+    gaps_in = 5
+    gaps_out = 9
     border_size = 2
     # col.active_border = rgba(a9b1d6aa) rgba(a9b1d6ee) 45deg
     col.active_border = rgba(a9b1d6aa)
@@ -128,6 +128,7 @@ device:epic mouse V1 {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = workspace 9,class:brave-browser,title:^New Private Tab - Brave$
+windowrulev2 = workspace 8,class:discord
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
