--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,6 +6,8 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
+wayland_titlebar_color background
+
 font_family      JetBrainsMono NF
 bold_font        auto
 italic_font      auto
