--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,10 +10,8 @@ set -g prefix C-Space
 bind C-Space send-prefix
 
 # Vim style pane selection
-bind h select-pane -L
-bind j select-pane -D 
-bind k select-pane -U
-bind l select-pane -R
+bind -n M-H previous-window
+bind -n M-L next-window
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
