hyprland config changes

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,6 +1,6 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
-# monitor = eDP-1,highres@60,auto,auto
-monitor = ,preferred,auto,auto
+monitor = eDP-1,highres@60,auto,auto
+monitor = DP-1,preferred,auto,auto
 
 env = GTK_THEME, Adwaita-dark
 env = GDK_BACKEND, wayland
@@ -12,7 +12,8 @@ env = XDG_SESSION_TYPE, wayland
 env = XDG_SESSION_DESKTOP, Hyprland
 
 env = MOZ_ENABLE_WAYLAND, 1
-env = EDITOR,helix
+env = EDITOR, helix
+env = XCURSOR_SIZE, 24
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -22,7 +23,7 @@ exec-once = hyprpaper
 exec-once = waybar 
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = nm-applet
 exec-once = blueman-applet
 
@@ -49,9 +50,12 @@ input {
 
 misc {
   disable_hyprland_logo = true 
-  disable_splash_rendering = false 
+  disable_splash_rendering = true
+  mouse_move_enables_dpms = true
+  key_press_enables_dpms = true
   animate_manual_resizes = false
   animate_mouse_windowdragging = false
+  layers_hog_keyboard_focus = false
   vfr = true
   vrr = 0
 }
@@ -128,12 +132,14 @@ device:epic mouse V1 {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = workspace 9,class:brave-browser,title:^New Private Tab - Brave$
-windowrulev2 = workspace 8,class:discord
+windowrule = float,^(discord)$
+windowrule = workspace 8,^(discord)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+bind = $mainMod ALT, M, exit
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, F, togglefloating, 
 bind = $mainMod, R, exec, wofi --show run
@@ -145,10 +151,13 @@ bind = $mainMod, Return, exec, kitty
 bind = $mainMod ALT, F, exec, nautilus
 bind = $mainMod ALT, B, exec, brave
 bind = $mainMod ALT, N, exec, brave --incognito
-bind = $mainMod ALT, O, exec, md.obsidian.Obsidian
+bind = $mainMod ALT, D, exec, flatpak run com.discordapp.Discord
+bind = $mainMod ALT, O, exec, flatpak run md.obsidian.Obsidian
 bind = $mainMod ALT, W, exec, ~/.local/bin/rway
 
-# bind = $mainMod ALT, L, exec, swaylock
+bind = $mainMod ALT, P, exec, hyprctl keyword monitor "DP-1, preferred, auto, auto"
+bind = $mainMod ALT, P, exec, hyprctl keyword monitor "eDP-1, disable"
+bind = $mainMod ALT SHIFT, P, exec, hyprctl keyword monitor "eDP-1, 3840x2160, auto, auto"
 bind = $mainMod ALT, L, exec, systemctl suspend
 
 # Move focus with mainMod + arrow keys
@@ -200,7 +209,7 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # bind = SUPER, g, togglegroup
-bind = SUPER, tab, movetoworkspace, +1
+bind = SUPER, tab, workspace, e+1
 
 bind = ALT, tab, workspace, e+1
 
