--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -150,7 +150,7 @@ bind = $mainMod, S, togglesplit, # dwindle
 bind = $mainMod, Return, exec, kitty
 bind = $mainMod ALT, F, exec, nautilus
 bind = $mainMod ALT, B, exec, brave
-bind = $mainMod ALT, N, exec, brave --incognito
+bind = $mainMod ALT, N, exec, flatpak run net.mullvad.MullvadBrowser
 bind = $mainMod ALT, D, exec, flatpak run com.discordapp.Discord
 bind = $mainMod ALT, O, exec, flatpak run md.obsidian.Obsidian
 bind = $mainMod ALT, W, exec, ~/.local/bin/rway
