change to tokyo night kitty color scheme

--- a/kitty/.config/kitty/tokyo-night.conf
+++ b/kitty/.config/kitty/tokyo-night.conf
@@ -37,7 +37,7 @@ color10 #b9f27c
 color11 #ff9e64
 color12 #7da6ff
 color13 #bb9af7
-color14 #7dcfff
+color14 #0db9d7
 color15 #c0caf5
 
 # extended colors
