remove 2nd monitor from hyprland config

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,6 +1,6 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = eDP-1,highres@60,auto,auto
-monitor = DP-1,preferred,auto,auto
+# monitor = eDP-1,highres@60,auto,auto
+monitor = ,preferred,auto,auto
 
 env = GTK_THEME, Adwaita-dark
 env = GDK_BACKEND, wayland
