enable auto settings for 2nd monitor

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,5 +1,5 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
-# monitor = eDP-1,highres@60,auto,auto
+monitor = eDP-1,highres@60,auto,auto
 monitor = ,preferred,auto,auto
 
 env = GTK_THEME, Adwaita-dark
