hyprland config fixes

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,6 +1,6 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = eDP-1,highres@60,auto,auto
-monitor = ,preferred,auto,auto
+monitor = ,highres@49,auto,auto
 
 env = GTK_THEME, Adwaita-dark
 env = GDK_BACKEND, wayland
@@ -63,11 +63,11 @@ misc {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 5
-    gaps_out = 9
-    border_size = 2
+    gaps_in = 4
+    gaps_out = 4
+    border_size = 1
     # col.active_border = rgba(a9b1d6aa) rgba(a9b1d6ee) 45deg
-    col.active_border = rgba(a9b1d6aa)
+    col.active_border = rgba(7aa2f7aa)
     col.inactive_border = rgba(24283bee)
 
     layout = dwindle
@@ -131,7 +131,7 @@ device:epic mouse V1 {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = workspace 9,class:brave-browser,title:^New Private Tab - Brave$
+windowrulev2 = workspace 9,class:^(Mullvad Browser)$,title:^(Mullvad Browser)$
 windowrule = float,^(discord)$
 windowrule = workspace 8,^(discord)$
 
@@ -155,9 +155,6 @@ bind = $mainMod ALT, D, exec, flatpak run com.discordapp.Discord
 bind = $mainMod ALT, O, exec, flatpak run md.obsidian.Obsidian
 bind = $mainMod ALT, W, exec, ~/.local/bin/rway
 
-bind = $mainMod ALT, P, exec, hyprctl keyword monitor "DP-1, preferred, auto, auto"
-bind = $mainMod ALT, P, exec, hyprctl keyword monitor "eDP-1, disable"
-bind = $mainMod ALT SHIFT, P, exec, hyprctl keyword monitor "eDP-1, 3840x2160, auto, auto"
 bind = $mainMod ALT, L, exec, systemctl suspend
 
 # Move focus with mainMod + arrow keys
