--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -173,6 +173,13 @@ bind = SUPER SHIFT, L, movewindow, r
 bind = SUPER SHIFT, K, movewindow, u
 bind = SUPER SHIFT, J, movewindow, d
 
+# Resize Windows with mainMod + Control
+bind = $mainMod CONTROL, h, resizeactive, -40 0
+bind = $mainMod CONTROL, l, resizeactive, 40 0
+bind = $mainMod CONTROL, k, resizeactive, 0 -40
+bind = $mainMod CONTROL, j, resizeactive, 0 40
+
+
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
