change hyprland EDITOR variable

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -12,7 +12,7 @@ env = XDG_SESSION_TYPE, wayland
 env = XDG_SESSION_DESKTOP, Hyprland
 
 env = MOZ_ENABLE_WAYLAND, 1
-env = EDITOR, helix
+env = EDITOR, nvim
 env = XCURSOR_SIZE, 24
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -26,6 +26,8 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = nm-applet
 exec-once = blueman-applet
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --type image --watch cliphist store
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -154,6 +156,8 @@ bind = $mainMod ALT, N, exec, flatpak run net.mullvad.MullvadBrowser
 bind = $mainMod ALT, D, exec, flatpak run com.discordapp.Discord
 bind = $mainMod ALT, O, exec, flatpak run md.obsidian.Obsidian
 bind = $mainMod ALT, W, exec, ~/.local/bin/rway
+
+bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 
 bind = $mainMod ALT, L, exec, systemctl suspend
 
