more hyprland organizing and cleanup

--- a/hypr/.config/hypr/settings.conf
+++ b/hypr/.config/hypr/settings.conf
@@ -53,7 +53,7 @@ decoration {
     drop_shadow = false
     shadow_range = 4
     shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    col.shadow = $shadow
 }
 
 animations {
