added swappy config and keybind to hyprland, changed mako colors

--- a/hypr/.config/hypr/keybinds.conf
+++ b/hypr/.config/hypr/keybinds.conf
@@ -78,6 +78,7 @@ bindm = $mainMod, mouse:273, resizewindow
 bind = SUPER, tab, workspace, e+1
 bind = ALT, tab, workspace, e+1
 
+bind = SHIFT, print, exec, grim -g "$(slurp)" - | swappy -f -
 bind = , print, exec, grim -g "$(slurp)" -l 3 ~/Pictures/Screenshots/$(date +"%Y-%m-%d-%H%M%S").png | wl-copy -t image/png
 
 binde=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
