added keybinds for enabling/disabling external monitor

--- a/hypr/.config/hypr/keybinds.conf
+++ b/hypr/.config/hypr/keybinds.conf
@@ -21,6 +21,9 @@ bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 
 bind = $mainMod ALT, L, exec, systemctl suspend
 
+bind = $mainMod ALT, P, exec, hyprctl keyword monitor "eDP-1,disabled"
+bind = $mainMod CONTROL, P, exec, hyprctl keyword monitor "eDP-1,highres@60,auto,auto"
+
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
