hyprland keybind changes. making swaylock bigger.

--- a/hypr/.config/hypr/keybinds.conf
+++ b/hypr/.config/hypr/keybinds.conf
@@ -1,7 +1,7 @@
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod ALT, Q, exit
+bind = $mainMod SHIFT, Q, exit
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, F, togglefloating, 
 bind = $mainMod, R, exec, wofi --show run
@@ -19,7 +19,8 @@ bind = $mainMod ALT, W, exec, ~/.local/bin/rway
 
 bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 
-bind = $mainMod ALT, L, exec, systemctl suspend
+bind = $mainMod ALT, L, exec, swaylock
+bind = $mainMod ALT, BACKSPACE, exec, systemctl suspend
 
 bind = $mainMod ALT, P, exec, hyprctl keyword monitor "eDP-1,disabled"
 bind = $mainMod CONTROL, P, exec, hyprctl keyword monitor "eDP-1,highres@60,auto,auto"
