--- a/hypr/.config/hypr/keybinds.conf
+++ b/hypr/.config/hypr/keybinds.conf
@@ -25,6 +25,9 @@ bind = $mainMod ALT, BACKSPACE, exec, systemctl suspend
 bind = $mainMod ALT, P, exec, hyprctl keyword monitor "eDP-1,disabled"
 bind = $mainMod CONTROL, P, exec, hyprctl keyword monitor "eDP-1,highres@60,auto,auto"
 
+bind = SHIFT, print, exec, grim -g "$(slurp -o -r -c '#ff0000ff')" - | satty --filename - --fullscreen --output-filename ~/Pictures/Screenshots/satty-$(date '+%Y%m%d-%H%M%S').png
+bind = , print, exec, krim -g "$(slurp)" -l 3 ~/Pictures/Screenshots/$(date +"%Y%m%d-%H%M%S").png | wl-copy -t image/png
+
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
@@ -81,9 +84,6 @@ bindm = $mainMod, mouse:273, resizewindow
 
 bind = SUPER, tab, workspace, e+1
 bind = ALT, tab, workspace, e+1
-
-bind = SHIFT, print, exec, grim -g "$(slurp)" - | swappy -f -
-bind = , print, exec, grim -g "$(slurp)" -l 3 ~/Pictures/Screenshots/$(date +"%Y-%m-%d-%H%M%S").png | wl-copy -t image/png
 
 binde=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 binde=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
