--- a/hypr/.config/hypr/keybinds.conf
+++ b/hypr/.config/hypr/keybinds.conf
@@ -25,8 +25,8 @@ bind = $mainMod ALT, BACKSPACE, exec, systemctl suspend
 bind = $mainMod ALT, P, exec, hyprctl keyword monitor "eDP-1,disabled"
 bind = $mainMod CONTROL, P, exec, hyprctl keyword monitor "eDP-1,highres@60,auto,auto"
 
-bind = SHIFT, print, exec, grim -g "$(slurp -o -r -c '#ff0000ff')" - | satty --filename - --fullscreen --output-filename ~/Pictures/Screenshots/satty-$(date '+%Y%m%d-%H%M%S').png
-bind = , print, exec, krim -g "$(slurp)" -l 3 ~/Pictures/Screenshots/$(date +"%Y%m%d-%H%M%S").png | wl-copy -t image/png
+bind = SUPER, print, exec, grim -g "$(slurp)" - | satty --filename - --fullscreen --output-filename ~/Pictures/Screenshots/$(date '+%Y%m%d-%H%M%S')-satty.png
+bind = , print, exec, grim -g "$(slurp)" -l 3 ~/Pictures/Screenshots/$(date +"%Y%m%d-%H%M%S").png | wl-copy -t image/png
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
