--- a/hypr/.config/hypr/windowrules.conf
+++ b/hypr/.config/hypr/windowrules.conf
@@ -5,5 +5,5 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
 windowrulev2 = workspace 9,class:^(Mullvad Browser)$,title:^(Mullvad Browser)$
-windowrule = float,^(discord)$
+#windowrule = float,^(discord)$
 windowrule = workspace 8,^(discord)$
