added yazi config. add zoxide init to bash and zsh. various hyprland config changes

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -2,18 +2,17 @@
 monitor = eDP-1,highres@60,auto,auto
 monitor = ,highres@49,auto,auto
 
-env = GTK_THEME, Adwaita-dark
-env = GDK_BACKEND, wayland
-env = SDL_VIDEODRIVER, wayland
-env = CLUTTER_BACKEND, wayland
+#env = GTK_THEME,Fluent-Dark
+env = GDK_BACKEND,wayland
+env = SDL_VIDEODRIVER,wayland
+env = CLUTTER_BACKEND,wayland
 
-env = XDG_CURRENT_DESKTOP, Hyprland
-env = XDG_SESSION_TYPE, wayland
-env = XDG_SESSION_DESKTOP, Hyprland
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
 
-env = MOZ_ENABLE_WAYLAND, 1
-env = EDITOR, helix
-env = XCURSOR_SIZE, 24
+env = MOZ_ENABLE_WAYLAND,1
+env = EDITOR,nvim
 
 source = ~/.config/hypr/exec.conf
 source = ~/.config/hypr/colors.conf
