--- a/hypr/.config/hypr/keybinds.conf
+++ b/hypr/.config/hypr/keybinds.conf
@@ -11,7 +11,7 @@ bind = $mainMod, S, togglesplit, # dwindle
 
 bind = $mainMod, Return, exec, kitty
 bind = $mainMod ALT, F, exec, pcmanfm
-bind = $mainMod ALT, B, exec, firefox
+bind = $mainMod ALT, B, exec, brave
 bind = $mainMod ALT, N, exec, flatpak run net.mullvad.MullvadBrowser
 bind = $mainMod ALT, D, exec, flatpak run io.github.spacingbat3.webcord
 bind = $mainMod ALT, O, exec, flatpak run md.obsidian.Obsidian
