switch from webcord to discord

--- a/hypr/.config/hypr/windowrules.conf
+++ b/hypr/.config/hypr/windowrules.conf
@@ -6,4 +6,4 @@
 
 windowrulev2 = workspace 9,class:^(Mullvad Browser)$,title:^(Mullvad Browser)$
 #windowrule = float,^(discord)$
-windowrule = workspace 8,^(WebCord)$
+windowrule = workspace 8,^(discord)$
