--- a/hypr/.config/hypr/keybinds.conf
+++ b/hypr/.config/hypr/keybinds.conf
@@ -13,7 +13,7 @@ bind = $mainMod, Return, exec, kitty
 bind = $mainMod ALT, F, exec, pcmanfm
 bind = $mainMod ALT, B, exec, brave
 bind = $mainMod ALT, N, exec, flatpak run net.mullvad.MullvadBrowser
-bind = $mainMod ALT, D, exec, flatpak run io.github.spacingbat3.webcord
+bind = $mainMod ALT, D, exec, flatpak run com.discordapp.Discord
 bind = $mainMod ALT, O, exec, flatpak run md.obsidian.Obsidian
 bind = $mainMod ALT, W, exec, ~/.local/bin/rway
 
