--- a/hypr/.config/hypr/windowrules.conf
+++ b/hypr/.config/hypr/windowrules.conf
@@ -4,6 +4,6 @@
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
-windowrulev2 = workspace 9,class:^(Mullvad Browser)$,title:^(Mullvad Browser)$
+windowrulev2 = workspace 9,class:^(brave-browser)$,title:^(New Private Tab - Brave)$
 #windowrule = float,^(discord)$
 windowrule = workspace 8,^(discord)$
