hyprland gaps size and windowrule change

--- a/hypr/.config/hypr/windowrules.conf
+++ b/hypr/.config/hypr/windowrules.conf
@@ -7,3 +7,4 @@
 windowrulev2 = workspace 9,class:^(brave-browser)$,title:^(New Private Tab - Brave)$
 #windowrule = float,^(discord)$
 windowrule = workspace 8,^(discord)$
+windowrule = workspace 10,^(cafe.avery.Delfin)$
