--- a/hypr/.config/hypr/keybinds.conf
+++ b/hypr/.config/hypr/keybinds.conf
@@ -4,8 +4,8 @@ $mainMod = SUPER
 bind = $mainMod SHIFT, Q, exit
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, F, togglefloating, 
-bind = $mainMod, R, exec, wofi --show run
-bind = $mainMod ALT, R, exec, wofi --show drun
+bind = $mainMod ALT, R, exec, wofi --show run
+bind = $mainMod, R, exec, nwg-drawer
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
 
