hyprland config changes

--- a/hypr/.config/hypr/keybinds.conf
+++ b/hypr/.config/hypr/keybinds.conf
@@ -11,8 +11,8 @@ bind = $mainMod, S, togglesplit, # dwindle
 
 bind = $mainMod, Return, exec, kitty
 bind = $mainMod ALT, F, exec, pcmanfm
-bind = $mainMod ALT, B, exec, brave
-bind = $mainMod ALT, N, exec, brave --incognito
+bind = $mainMod ALT, B, exec, firefox
+bind = $mainMod ALT, N, exec, firefox --private-window
 bind = $mainMod ALT, D, exec, flatpak run com.discordapp.Discord
 bind = $mainMod ALT, O, exec, flatpak run md.obsidian.Obsidian
 bind = $mainMod ALT, W, exec, ~/.local/bin/rway
