--- a/hypr/.config/hypr/keybinds.conf
+++ b/hypr/.config/hypr/keybinds.conf
@@ -5,7 +5,7 @@ $mainMod = SUPER
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, F, togglefloating, 
 bind = $mainMod ALT, R, exec, wofi --show run
-bind = $mainMod, R, exec, nwg-drawer
+bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
 
