hyprland config changes

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -14,8 +14,4 @@ env = XDG_SESSION_DESKTOP,Hyprland
 env = MOZ_ENABLE_WAYLAND,1
 env = EDITOR,nvim
 
-source = ~/.config/hypr/exec.conf
-source = ~/.config/hypr/colors.conf
-source = ~/.config/hypr/settings.conf
-source = ~/.config/hypr/windowrules.conf
-source = ~/.config/hypr/keybinds.conf
+source = ~/.config/hypr/source/*
