--- a/hypr/.config/waybar/config
+++ b/hypr/.config/waybar/config
@@ -1,14 +1,3 @@
 {
-"layer": "top",
-"position": "top",
-"height": 10,
-"margin-bottom":0,
-"margin-top":0,
-
-    // Load Modules
-    "include": ["~/.config/waybar/modules-mine.json"],
-
-"modules-left": ["cpu","memory","network"],
-"modules-center": ["group/system2"],
-"modules-right":  ["tray","pulseaudio","backlight","battery","clock"],
+  "include": ["~/.config/waybar/bubble"]
 }
