--- a/hypr/.config/hypr/source/keybinds.conf
+++ b/hypr/.config/hypr/source/keybinds.conf
@@ -10,7 +10,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
 
 bind = $mainMod, Return, exec, kitty
-bind = $mainMod ALT, F, exec, pcmanfm
+bind = $mainMod ALT, F, exec, nautilus
 bind = $mainMod ALT, B, exec, chromium
 bind = $mainMod ALT, N, exec, brave --incognito
 bind = $mainMod ALT, D, exec, flatpak run com.discordapp.Discord
