--- a/hypr/.config/hypr/source/exec.conf
+++ b/hypr/.config/hypr/source/exec.conf
@@ -1,5 +1,5 @@
 exec-once = ~/.config/hypr/xdg-portal-hyprland
-exec-once = hyprpaper
+exec-once = swaybg -m fill -i ~/.cache/wallpaper
 exec-once = waybar 
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
