--- a/hypr/.config/hypr/source/keybinds.conf
+++ b/hypr/.config/hypr/source/keybinds.conf
@@ -11,7 +11,7 @@ bind = $mainMod, S, togglesplit, # dwindle
 
 bind = $mainMod, Return, exec, kitty
 bind = $mainMod ALT, F, exec, nautilus
-bind = $mainMod ALT, B, exec, firefox
+bind = $mainMod ALT, B, exec, brave
 bind = $mainMod ALT, N, exec, brave --incognito
 bind = $mainMod ALT, D, exec, flatpak run com.discordapp.Discord
 bind = $mainMod ALT, O, exec, flatpak run md.obsidian.Obsidian
