switch from wlogout to custom wofi menu for locking, suspending, rebooting, etc.

--- a/hypr/.config/hypr/source/keybinds.conf
+++ b/hypr/.config/hypr/source/keybinds.conf
@@ -10,7 +10,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
 
 bind = $mainMod, Return, exec, kitty
-bind = $mainMod ALT, F, exec, nautilus
+bind = $mainMod ALT, F, exec, pcmanfm
 bind = $mainMod ALT, B, exec, brave
 bind = $mainMod ALT, N, exec, brave --incognito
 bind = $mainMod ALT, D, exec, flatpak run com.discordapp.Discord
@@ -20,7 +20,7 @@ bind = $mainMod ALT, M, exec, ~/.local/bin/pprofile
 
 bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 
-bind = $mainMod ALT, BACKSPACE, exec, wlogout
+bind = $mainMod ALT, BACKSPACE, exec, powermenu
 #bind = $mainMod ALT, BACKSPACE, exec, systemctl suspend
 
 bind = $mainMod ALT, P, exec, hyprctl keyword monitor "eDP-1,disabled"
