--- a/hypr/.config/hypr/source/keybinds.conf
+++ b/hypr/.config/hypr/source/keybinds.conf
@@ -4,8 +4,8 @@ $mainMod = SUPER
 #bind = $mainMod SHIFT, Q, exit
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, F, togglefloating, 
-bind = $mainMod ALT, R, exec, wofi --show run
-bind = $mainMod, R, exec, wofi --show drun
+bind = $mainMod ALT, R, exec, fuzzel --filter-desktop
+bind = $mainMod, R, exec, fuzzel
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
 
@@ -18,7 +18,7 @@ bind = $mainMod ALT, O, exec, flatpak run md.obsidian.Obsidian
 bind = $mainMod ALT, W, exec, ~/.local/bin/rway
 bind = $mainMod ALT, M, exec, ~/.local/bin/pprofile
 
-bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+bind = SUPER, V, exec, cliphist list | fuzzel --dmenu | cliphist decode | wl-copy
 
 bind = $mainMod ALT, BACKSPACE, exec, powermenu
 #bind = $mainMod ALT, BACKSPACE, exec, systemctl suspend
