fix kitty in fuzzel config

--- a/fuzzel/.config/fuzzel/fuzzel.ini
+++ b/fuzzel/.config/fuzzel/fuzzel.ini
@@ -4,7 +4,7 @@ width=30
 font=JetBrainsMono NF:weight=normal:size=14
 line-height=20
 fields=name,generic,comment,categories,filename,keywords
-terminal=kitty -e
+terminal=kitty
 prompt="❯   " 
 layer=overlay
 [colors]
