--- a/hypr/.config/hypr/source/keybinds.conf
+++ b/hypr/.config/hypr/source/keybinds.conf
@@ -18,7 +18,7 @@ bind = $mainMod ALT, O, exec, flatpak run md.obsidian.Obsidian
 bind = $mainMod ALT, W, exec, ~/.local/bin/rway
 bind = $mainMod ALT, M, exec, ~/.local/bin/pprofile
 
-bind = SUPER, V, exec, cliphist list | fuzzel --dmenu | cliphist decode | wl-copy
+#bind = SUPER, V, exec, cliphist list | fuzzel --dmenu | cliphist decode | wl-copy
 
 bind = $mainMod ALT, BACKSPACE, exec, powermenu
 #bind = $mainMod ALT, BACKSPACE, exec, systemctl suspend
