--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -4,7 +4,7 @@ general {
 
 background {
     monitor = eDP-1
-    path = ~/Pictures/wallpaper/bladerunner2049/KviIrTZ.jpg 
+    path = /home/morehush/.config/hypr/lockscreen.png 
 }
 
 input-field {
