removed monitor from hyprlock config

--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -3,12 +3,12 @@ general {
 }
 
 background {
-    monitor = eDP-1
+    monitor = 
     path = /home/morehush/.config/hypr/lockscreen.png 
 }
 
 input-field {
-    monitor = eDP-1
+    monitor = 
     size = 200, 50
     outline_thickness = 3
     outer_color = rgb(151515)
