--- a/hypr/.config/hypr/source/keybinds.conf
+++ b/hypr/.config/hypr/source/keybinds.conf
@@ -4,7 +4,7 @@ $mainMod = SUPER
 #bind = $mainMod SHIFT, Q, exit
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, F, togglefloating, 
-bind = $mainMod ALT, R, exec, fuzzel --filter-desktop
+bind = $mainMod, SPACE, exec, fuzzel --filter-desktop
 bind = $mainMod, R, exec, fuzzel
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
@@ -20,7 +20,7 @@ bind = $mainMod ALT, M, exec, ~/.local/bin/pprofile
 
 #bind = SUPER, V, exec, cliphist list | fuzzel --dmenu | cliphist decode | wl-copy
 
-bind = $mainMod ALT, BACKSPACE, exec, powermenu
+bind = $mainMod, Esc, exec, powermenu
 #bind = $mainMod ALT, BACKSPACE, exec, systemctl suspend
 
 bind = $mainMod ALT, P, exec, hyprctl keyword monitor "eDP-1,disabled"
