hyprlock config changes

--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -14,3 +14,15 @@ input-field {
     outer_color = rgb(151515)
     inner_color = rgb(200, 200, 200)
 }
+
+label {
+  monitor =
+  text = $TIME
+  color = rgb(151515)
+  font_size = 50
+  font_family = JetBrainsMono NF
+
+  position = 0, 140
+  halign = center
+  valign = center
+}
