--- a/hypr/.config/hypr/source/keybinds.conf
+++ b/hypr/.config/hypr/source/keybinds.conf
@@ -20,7 +20,7 @@ bind = $mainMod ALT, M, exec, ~/.local/bin/pprofile
 
 #bind = SUPER, V, exec, cliphist list | fuzzel --dmenu | cliphist decode | wl-copy
 
-bind = $mainMod, Esc, exec, powermenu
+bind = $mainMod ALT, BACKSPACE, exec, powermenu
 #bind = $mainMod ALT, BACKSPACE, exec, systemctl suspend
 
 bind = $mainMod ALT, P, exec, hyprctl keyword monitor "eDP-1,disabled"
