various changes for using hyprlock

--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -9,20 +9,24 @@ background {
 
 input-field {
     monitor = 
-    size = 200, 50
+    size = 300, 50
     outline_thickness = 2
     outer_color = rgb(151515)
-    inner_color = rgb(200, 200, 200)
+    inner_color = rgb(a7a7a7)
+
+    position = 40, 10
+    halign = left
+    valign = bottom
 }
 
 label {
   monitor =
   text = $TIME
-  color = rgb(151515)
+  color = rgb(afafaf)
   font_size = 50
   font_family = JetBrainsMono NF
 
-  position = 0, 140
-  halign = center
-  valign = center
+  position = 40, 20
+  halign = left
+  valign = bottom
 }
