--- a/hypr/.config/hypr/source/settings.conf
+++ b/hypr/.config/hypr/source/settings.conf
@@ -36,6 +36,7 @@ general {
     border_size = 2
     col.active_border = $active
     col.inactive_border = $inactive
+    #no_cursor_warps = true
 
     layout = dwindle
 }
