hyprland and waybar config changes

--- a/hypr/.config/hypr/source/keybinds.conf
+++ b/hypr/.config/hypr/source/keybinds.conf
@@ -30,6 +30,10 @@ bind = , print, exec, grim -g "$(slurp)" -l 3 ~/Pictures/Screenshots/$(date +"%Y
 bind = SUPER, print, exec, grim -g "$(slurp)" - | satty --filename - --fullscreen --output-filename ~/Pictures/Screenshots/$(date '+%Y%m%d-%H%M%S')-satty.png
 bind = SUPER ALT, print, exec, grim ~/Pictures/Screenshots/$(date +'%Y%m%d-%H%M%S').png
 
+# OBS
+bind = CONTROL SHIFT, R, pass, ^(com\.obsproject\.Studio)$
+#bind = SUPER CONTROL, \, pass, ^(com\.obsproject\.Studio)$
+
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
