change location of hyprlock background image and update script to convert and set lockscreen image

--- a/helix/.config/helix/config.toml
+++ b/helix/.config/helix/config.toml
@@ -21,6 +21,6 @@ enable = true
 [keys.normal]
 esc = ["collapse_selection", "keep_primary_selection"]
 
-# [keys.normal.space]
-# w = ":write"
-# q = ":quit"
+[keys.normal.space]
+w = ":write"
+q = ":quit"
