--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -4,7 +4,7 @@ general {
 
 background {
     monitor = 
-    path = /home/morehush/.config/hypr/lockscreen.png 
+    path = $HOME/.cache/lockscreen.png 
 }
 
 input-field {
