--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -12,6 +12,6 @@ env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 
 env = MOZ_ENABLE_WAYLAND,1
-env = EDITOR,nvim
+env = EDITOR,helix
 
 source = ~/.config/hypr/source/*
