--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -4,7 +4,16 @@ general {
 
 background {
     monitor = 
-    path = $HOME/.cache/lockscreen.png 
+    path = screenshot
+    color = rgba(15161eff)
+
+    blur_passes = 2
+    blur_size = 7
+    noise = 0.0117
+    contrast = 0.8916
+    brightness = 0.7172
+    vibrancy = 0.1696
+    vibrancy_darkness = 1.0
 }
 
 input-field {
@@ -14,19 +23,19 @@ input-field {
     outer_color = rgb(151515)
     inner_color = rgb(a7a7a7)
 
-    position = 40, 10
-    halign = left
-    valign = bottom
+    position = 0, 0
+    halign = center
+    valign = center
 }
 
 label {
   monitor =
   text = $TIME
   color = rgb(afafaf)
-  font_size = 50
+  font_size = 80
   font_family = JetBrainsMono NF
 
-  position = 40, 20
+  position = 40, 40
   halign = left
   valign = bottom
 }
