--- a/hypr/.config/hypr/source/keybinds.conf
+++ b/hypr/.config/hypr/source/keybinds.conf
@@ -20,15 +20,15 @@ bind = $mainMod ALT, M, exec, ~/.local/bin/pprofile
 
 #bind = SUPER, V, exec, cliphist list | fuzzel --dmenu | cliphist decode | wl-copy
 
+bind = CONTROL ALT, DELETE, exec, hyprlock 
 bind = $mainMod ALT, BACKSPACE, exec, powermenu
-#bind = $mainMod ALT, BACKSPACE, exec, systemctl suspend
 
 bind = $mainMod ALT, P, exec, hyprctl keyword monitor "eDP-1,disabled"
 bind = $mainMod CONTROL, P, exec, hyprctl keyword monitor "eDP-1,highres@60,auto,auto"
 
-bind = , print, exec, grim -g "$(slurp)" -l 3 ~/Pictures/Screenshots/$(date +"%Y%m%d-%H%M%S").png | wl-copy -t image/png
+bind = SUPER ALT, print, exec, grim -g "$(slurp)" -l 3 ~/Pictures/Screenshots/$(date +"%Y%m%d-%H%M%S").png | wl-copy -t image/png
 bind = SUPER, print, exec, grim -g "$(slurp)" - | satty --filename - --fullscreen --output-filename ~/Pictures/Screenshots/$(date '+%Y%m%d-%H%M%S')-satty.png
-bind = SUPER ALT, print, exec, grim ~/Pictures/Screenshots/$(date +'%Y%m%d-%H%M%S').png
+bind = , print, exec, grim ~/Pictures/Screenshots/$(date +'%Y%m%d-%H%M%S').png
 
 # OBS
 bind = CONTROL SHIFT, R, pass, ^(com\.obsproject\.Studio)$
