hyprland and hyprlock config changes

--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -30,7 +30,7 @@ input-field {
 
 label {
   monitor =
-  text = $TIME
+  text = 󰅐 $TIME
   color = rgb(afafaf)
   font_size = 80
   font_family = JetBrainsMono NF
