--- a/hypr/.config/hypr/source/keybinds.conf
+++ b/hypr/.config/hypr/source/keybinds.conf
@@ -11,7 +11,7 @@ bind = $mainMod, S, togglesplit, # dwindle
 
 bind = $mainMod, Return, exec, kitty
 bind = $mainMod ALT, F, exec, pcmanfm
-bind = $mainMod ALT, B, exec, chromium
+bind = $mainMod ALT, B, exec, brave
 bind = $mainMod ALT, N, exec, brave --incognito
 bind = $mainMod ALT, D, exec, flatpak run --socket=wayland com.discordapp.Discord --enable-features=UseOzonePlatform --ozone-platform=wayland
 bind = $mainMod ALT, T, exec, flatpak run --nosocket=x11 io.freetubeapp.FreeTube --ozone-platform-hint=auto --enable-features=WaylandWindowDecorations
